# polybench-rs

./: Cargo.toml  bmvm.json  build.sh
.cargo/: config.toml
src/: lib.rs  ndarray.rs  util.rs
src/datamining/: correlation.rs  covariance.rs
src/linear_algebra/blas/: gemm.rs  gemver.rs  gesummv.rs  symm.rs  syr2k.rs  syrk.rs  trmm.rs
src/linear_algebra/kernels/: _2mm.rs  _3mm.rs  atax.rs  bicg.rs  doitgen.rs  mvt.rs
src/linear_algebra/solvers/: cholesky.rs  durbin.rs  gramschmidt.rs  lu.rs  ludcmp.rs  trisolv.rs
src/medley/: deriche.rs  floyd_warshall.rs  nussinov.rs
src/stencils/: adi.rs  fdtd_2d.rs  heat_3d.rs  jacobi_1d.rs  jacobi_2d.rs  seidel_2d.rs
