[package]
name = "polybench-rs"
version = "0.2.0"
authors = ["Joseph Rafael Ferrer <rafael2x0@gmail.com>", "Nelson Gillo <nelson@gillos.de>"]
edition = "2024"
license = "GPLv2"

[features]
native = []
wasm = []
bmvm = ["bmvm-guest"]
links1 = []
links8 = []
links16 = []
links32 = []
links64 = []
links128 = []

[profile.wasm]
inherits = "release"
panic = "abort"

[profile.bmvm]
inherits = "release"
panic = "abort"

[profile.native]
inherits = "release"

[dependencies]
talc = "4.4.3"
spin = "0.10.0"
seq-macro = "0.3.6"
bmvm-guest = {optional = true, path = "../kvm/bmvm_guest"}